trans-methods/lab3/src/com/letstatt/antlr/tex2htmlParser.java
// Generated from java-escape by ANTLR 4.11.1

package com.letstatt.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class tex2htmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOLLAR=1, UNDERSCORE=2, CARET=3, LEFT_PARENTHESES=4, RIGHT_PARENTHESES=5, 
		LEFT_SQAURE_BRACKET=6, RIGHT_SQAURE_BRACKET=7, LEFT_BRACE=8, RIGHT_BRACE=9, 
		PLUS=10, MINUS=11, MULTIPLICATION=12, DIVISION=13, EQ=14, SQRT=15, FRAC=16, 
		DOCUMENTCLASS=17, ARTICLE=18, USEPACKAGE=19, DOCUMENT=20, BEGIN=21, END=22, 
		SPACE=23, WORD=24, NUMBER=25;
	public static final int
		RULE_tex2html = 0, RULE_header = 1, RULE_packages = 2, RULE_body = 3, 
		RULE_text = 4, RULE_math = 5, RULE_expr = 6, RULE_expr1 = 7, RULE_term = 8, 
		RULE_term1 = 9, RULE_factor = 10, RULE_group = 11, RULE_subsup = 12, RULE_plus = 13, 
		RULE_minus = 14, RULE_eq = 15, RULE_mul = 16, RULE_div = 17, RULE_sup = 18, 
		RULE_sub = 19, RULE_number = 20, RULE_word = 21, RULE_sqrt = 22, RULE_sqrt_base = 23, 
		RULE_frac = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"tex2html", "header", "packages", "body", "text", "math", "expr", "expr1", 
			"term", "term1", "factor", "group", "subsup", "plus", "minus", "eq", 
			"mul", "div", "sup", "sub", "number", "word", "sqrt", "sqrt_base", "frac"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'$'", "'_'", "'^'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			"'+'", "'-'", "'*'", "'/'", "'='", "'\\sqrt'", "'\\frac'", "'\\documentclass'", 
			null, "'\\usepackage'", null, "'\\begin'", "'\\end'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOLLAR", "UNDERSCORE", "CARET", "LEFT_PARENTHESES", "RIGHT_PARENTHESES", 
			"LEFT_SQAURE_BRACKET", "RIGHT_SQAURE_BRACKET", "LEFT_BRACE", "RIGHT_BRACE", 
			"PLUS", "MINUS", "MULTIPLICATION", "DIVISION", "EQ", "SQRT", "FRAC", 
			"DOCUMENTCLASS", "ARTICLE", "USEPACKAGE", "DOCUMENT", "BEGIN", "END", 
			"SPACE", "WORD", "NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tex2htmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tex2htmlContext extends ParserRuleContext {
		public StringBuilder res;
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public PackagesContext packages() {
			return getRuleContext(PackagesContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode EOF() { return getToken(tex2htmlParser.EOF, 0); }
		public Tex2htmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tex2html; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).enterTex2html(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).exitTex2html(this);
		}
	}

	public final Tex2htmlContext tex2html() throws RecognitionException {
		Tex2htmlContext _localctx = new Tex2htmlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_tex2html);

		StringBuilder res = new StringBuilder();
		((Tex2htmlContext)_localctx).res =  res;

		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			header();
			setState(51);
			packages();
			setState(52);
			body(res);
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode DOCUMENTCLASS() { return getToken(tex2htmlParser.DOCUMENTCLASS, 0); }
		public TerminalNode ARTICLE() { return getToken(tex2htmlParser.ARTICLE, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(DOCUMENTCLASS);
			setState(56);
			match(ARTICLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackagesContext extends ParserRuleContext {
		public List<TerminalNode> USEPACKAGE() { return getTokens(tex2htmlParser.USEPACKAGE); }
		public TerminalNode USEPACKAGE(int i) {
			return getToken(tex2htmlParser.USEPACKAGE, i);
		}
		public List<TerminalNode> LEFT_BRACE() { return getTokens(tex2htmlParser.LEFT_BRACE); }
		public TerminalNode LEFT_BRACE(int i) {
			return getToken(tex2htmlParser.LEFT_BRACE, i);
		}
		public List<TerminalNode> WORD() { return getTokens(tex2htmlParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(tex2htmlParser.WORD, i);
		}
		public List<TerminalNode> RIGHT_BRACE() { return getTokens(tex2htmlParser.RIGHT_BRACE); }
		public TerminalNode RIGHT_BRACE(int i) {
			return getToken(tex2htmlParser.RIGHT_BRACE, i);
		}
		public PackagesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packages; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).enterPackages(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).exitPackages(this);
		}
	}

	public final PackagesContext packages() throws RecognitionException {
		PackagesContext _localctx = new PackagesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_packages);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==USEPACKAGE) {
				{
				{
				setState(58);
				match(USEPACKAGE);
				setState(59);
				match(LEFT_BRACE);
				setState(60);
				match(WORD);
				setState(61);
				match(RIGHT_BRACE);
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public StringBuilder res;
		public TerminalNode BEGIN() { return getToken(tex2htmlParser.BEGIN, 0); }
		public List<TerminalNode> DOCUMENT() { return getTokens(tex2htmlParser.DOCUMENT); }
		public TerminalNode DOCUMENT(int i) {
			return getToken(tex2htmlParser.DOCUMENT, i);
		}
		public TerminalNode END() { return getToken(tex2htmlParser.END, 0); }
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public List<MathContext> math() {
			return getRuleContexts(MathContext.class);
		}
		public MathContext math(int i) {
			return getRuleContext(MathContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public BodyContext(ParserRuleContext parent, int invokingState, StringBuilder res) {
			super(parent, invokingState);
			this.res = res;
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).exitBody(this);
		}
	}

	public final BodyContext body(StringBuilder res) throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState(), res);
		enterRule(_localctx, 6, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(BEGIN);
			setState(68);
			match(DOCUMENT);
			_localctx.res.append("<!DOCTYPE html>\n<html lang=\"ru\"><head><title>ANTLR4 example</title></head><body>\n");
			setState(72); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(72);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case WORD:
				case NUMBER:
					{
					setState(70);
					text(res);
					}
					break;
				case DOLLAR:
					{
					setState(71);
					math(res);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(74); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 50331650L) != 0 );
			_localctx.res.append("</body></html>\n");
			setState(77);
			match(END);
			setState(78);
			match(DOCUMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextContext extends ParserRuleContext {
		public StringBuilder res;
		public StringBuilder t;
		public WordContext word;
		public NumberContext number;
		public List<WordContext> word() {
			return getRuleContexts(WordContext.class);
		}
		public WordContext word(int i) {
			return getRuleContext(WordContext.class,i);
		}
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public TextContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TextContext(ParserRuleContext parent, int invokingState, StringBuilder res) {
			super(parent, invokingState);
			this.res = res;
		}
		@Override public int getRuleIndex() { return RULE_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).enterText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).exitText(this);
		}
	}

	public final TextContext text(StringBuilder res) throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState(), res);
		enterRule(_localctx, 8, RULE_text);

		((TextContext)_localctx).t =  new StringBuilder();

		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			_localctx.res.append("<div><p>");
			setState(87); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(87);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case WORD:
						{
						setState(81);
						((TextContext)_localctx).word = word();
						_localctx.t.append((_localctx.t.length() > 0 ? " " : "") + (((TextContext)_localctx).word!=null?_input.getText(((TextContext)_localctx).word.start,((TextContext)_localctx).word.stop):null));
						}
						break;
					case NUMBER:
						{
						setState(84);
						((TextContext)_localctx).number = number();
						_localctx.t.append((_localctx.t.length() > 0 ? " " : "") + (((TextContext)_localctx).number!=null?_input.getText(((TextContext)_localctx).number.start,((TextContext)_localctx).number.stop):null));
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(89); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			_localctx.res.append(_localctx.t);
			    _localctx.res.append("</p></div>\n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MathContext extends ParserRuleContext {
		public StringBuilder res;
		public List<TerminalNode> DOLLAR() { return getTokens(tex2htmlParser.DOLLAR); }
		public TerminalNode DOLLAR(int i) {
			return getToken(tex2htmlParser.DOLLAR, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MathContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public MathContext(ParserRuleContext parent, int invokingState, StringBuilder res) {
			super(parent, invokingState);
			this.res = res;
		}
		@Override public int getRuleIndex() { return RULE_math; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).enterMath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).exitMath(this);
		}
	}

	public final MathContext math(StringBuilder res) throws RecognitionException {
		MathContext _localctx = new MathContext(_ctx, getState(), res);
		enterRule(_localctx, 10, RULE_math);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(DOLLAR);
			_localctx.res.append("<math display=\"block\">");
			setState(95);
			expr(res);
			setState(96);
			match(DOLLAR);
			_localctx.res.append("</math>\n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public StringBuilder res;
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public Expr1Context expr1() {
			return getRuleContext(Expr1Context.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExprContext(ParserRuleContext parent, int invokingState, StringBuilder res) {
			super(parent, invokingState);
			this.res = res;
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr(StringBuilder res) throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState(), res);
		enterRule(_localctx, 12, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			term(res);
			setState(100);
			expr1(res);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expr1Context extends ParserRuleContext {
		public StringBuilder res;
		public PlusContext plus() {
			return getRuleContext(PlusContext.class,0);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public Expr1Context expr1() {
			return getRuleContext(Expr1Context.class,0);
		}
		public EqContext eq() {
			return getRuleContext(EqContext.class,0);
		}
		public MinusContext minus() {
			return getRuleContext(MinusContext.class,0);
		}
		public Expr1Context(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Expr1Context(ParserRuleContext parent, int invokingState, StringBuilder res) {
			super(parent, invokingState);
			this.res = res;
		}
		@Override public int getRuleIndex() { return RULE_expr1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).enterExpr1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).exitExpr1(this);
		}
	}

	public final Expr1Context expr1(StringBuilder res) throws RecognitionException {
		Expr1Context _localctx = new Expr1Context(_ctx, getState(), res);
		enterRule(_localctx, 14, RULE_expr1);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				plus();
				_localctx.res.append("<mo>+</mo>");
				setState(104);
				term(res);
				setState(105);
				expr1(res);
				}
				break;
			case EQ:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				eq();
				_localctx.res.append("<mo>=</mo>");
				setState(109);
				term(res);
				setState(110);
				expr1(res);
				}
				break;
			case MINUS:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				minus();
				_localctx.res.append("<mo>-</mo>");
				setState(114);
				term(res);
				setState(115);
				expr1(res);
				}
				break;
			case DOLLAR:
			case RIGHT_PARENTHESES:
			case RIGHT_SQAURE_BRACKET:
			case RIGHT_BRACE:
				enterOuterAlt(_localctx, 4);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TermContext extends ParserRuleContext {
		public StringBuilder res;
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public Term1Context term1() {
			return getRuleContext(Term1Context.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TermContext(ParserRuleContext parent, int invokingState, StringBuilder res) {
			super(parent, invokingState);
			this.res = res;
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).exitTerm(this);
		}
	}

	public final TermContext term(StringBuilder res) throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState(), res);
		enterRule(_localctx, 16, RULE_term);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			factor(res);
			setState(121);
			term1(res);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Term1Context extends ParserRuleContext {
		public StringBuilder res;
		public MulContext mul() {
			return getRuleContext(MulContext.class,0);
		}
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public Term1Context term1() {
			return getRuleContext(Term1Context.class,0);
		}
		public DivContext div() {
			return getRuleContext(DivContext.class,0);
		}
		public Term1Context(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Term1Context(ParserRuleContext parent, int invokingState, StringBuilder res) {
			super(parent, invokingState);
			this.res = res;
		}
		@Override public int getRuleIndex() { return RULE_term1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).enterTerm1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).exitTerm1(this);
		}
	}

	public final Term1Context term1(StringBuilder res) throws RecognitionException {
		Term1Context _localctx = new Term1Context(_ctx, getState(), res);
		enterRule(_localctx, 18, RULE_term1);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MULTIPLICATION:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				mul();
				_localctx.res.append("<mo>*</mo>");
				setState(125);
				factor(res);
				setState(126);
				term1(res);
				}
				break;
			case DIVISION:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				div();
				_localctx.res.append("<mo>/</mo>");
				setState(130);
				factor(res);
				setState(131);
				term1(res);
				}
				break;
			case DOLLAR:
			case RIGHT_PARENTHESES:
			case RIGHT_SQAURE_BRACKET:
			case RIGHT_BRACE:
			case PLUS:
			case MINUS:
			case EQ:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FactorContext extends ParserRuleContext {
		public StringBuilder res;
		public GroupContext group() {
			return getRuleContext(GroupContext.class,0);
		}
		public SubsupContext subsup() {
			return getRuleContext(SubsupContext.class,0);
		}
		public SupContext sup() {
			return getRuleContext(SupContext.class,0);
		}
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public SubContext sub() {
			return getRuleContext(SubContext.class,0);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public FactorContext(ParserRuleContext parent, int invokingState, StringBuilder res) {
			super(parent, invokingState);
			this.res = res;
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).enterFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tex2htmlListener ) ((tex2htmlListener)listener).exitFactor(this);
		}
	}

	public final FactorContext factor(StringBuilder res) throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState(), res);
		enterRule(_localctx, 20, RULE_factor);
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				_localctx.res.append("<mrow>");
				setState(137);
				group(res);
				_localctx.res.append("</mrow>");
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				subsup(res);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				_localctx.res.append("<msup><mrow>");
				setState(142);
				group(res);
				_localctx.res.append("</mrow>");
				setState(144);
				sup();
				setState(145);
				factor(res);
				_localctx.res.append("</msup>");
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				_localctx.res.append("<msub><mrow>");
				setState(149);
				group(res);
				_localctx.res.append("</mrow>");
				setState(151);
				sub();
				setState(152);
				factor(res);
				_localctx.res.append("</msub>");
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
